<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_alfahrs"
            android:icon="@drawable/index"
            android:title="@string/fahrs" />
        <item
            android:id="@+id/nav_alazan"
            android:icon="@drawable/azantwo"
            android:title="@string/azan" />
        <item
            android:id="@+id/nav_alazkar"
            android:icon="@drawable/azkartwo"
            android:title="@string/azkar" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/icond"
            android:title="@string/setting" />

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/info"
            android:title="@string/about" />

        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/support"
            android:title="@string/support" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />

            <item
                android:id="@+id/nav_facebook"
                android:icon="@drawable/face"
                android:title="@string/facebook" />
            <item
                android:id="@+id/nav_insta"
                android:icon="@drawable/insta"
                android:title="@string/insta" />
        </menu>
    </item>
<!--
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_alfahrs"
            android:icon="@drawable/nav_list"
            android:title="الفهرس" />
        <item
            android:id="@+id/nav_alazan"
            android:title="الاذان"
            android:icon="@drawable/azan_nav"/>
        <item
            android:id="@+id/nav_alazkar"
            android:title="اذكار الصباح والمساء"
            android:icon="@drawable/azkar_nav"/>
        <item
            android:id="@+id/nav_setting"
            android:title="الاعدادات"
            android:icon="@drawable/nav_settings"
            />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />

            <item
                android:id="@+id/nav_facebook"
                android:icon="@drawable/nav_facebook"
                android:title="Facebook" />


            <item
                android:id="@+id/nav_insta"
                android:title="Instagram"
                android:icon="@drawable/nav_instagram"/>
        </menu>
    </item>
-->


</menu>
